manifests/deployment-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ma-bela-veltrup
  name: mlops-game-mongodb
  labels:
    app: mlops-game-mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mlops-game-mongodb
  template:
    metadata:
      labels:
        app: mlops-game-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.6
        args:
          - "--wiredTigerCacheSizeGB"
          - "1.0"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "2Gi"
      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: mlops-game-mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-game-mongodb
  namespace: ma-bela-veltrup
spec:
  selector:
    app: mlops-game-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
