manifests/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ma-bela-veltrup
  name: mlops-game-postgres
  labels:
    app: mlops-game-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mlops-game-postgres
  template:
    metadata:
      labels:
        app: mlops-game-postgres
    spec:
      containers:
      - name: postgres
        image: pgvector/pgvector:pg16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "2Gi"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: mlops-game-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-game-postgres
  namespace: ma-bela-veltrup
spec:
  selector:
    app: mlops-game-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
