manifests/ingress-game-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mlops-lab
  name: mlops-game-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    # WebSocket support
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - public.cluster.dbis.rwth-aachen.de
    secretName: wildcard-tls-secret-public
  rules:
  - host: public.cluster.dbis.rwth-aachen.de
    http:
      paths:
      - path: /mlops-lab-api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlops-game-api
            port:
              number: 8000
